# rag-test

./: Dockerfile  Makefile  compose.yml
.devcontainer/: devcontainer.json
src/: pyproject.toml  test.py  web-rag.py
